--- a/sass/components/_bubble.scss
+++ b/sass/components/_bubble.scss
@@ -22,8 +22,8 @@
       margin: 1.5rem 0;
     }
     @include respond(sm-phone) {
-      // height: 14rem;
-      // width: 14rem;
+      height: 12rem;
+      width: 12rem;
     }
   }
 
@@ -44,8 +44,8 @@
       width: 12rem;
     }
     @include respond(sm-phone) {
-      height: 12rem;
-      width: 12rem;
+      height: 11rem;
+      width: 11rem;
     }
 
     img {
